# gnome-mpv

./: .gitignore  results.out
data/: Makefile.am  io.github.GnomeMpv.gschema.xml.in  org.gnome-mpv.gschema.xml  org.gnome.GnomeMpv.appdata.xml.in  org.gnome.GnomeMpv.desktop  org.gnome.GnomeMpv.gschema.xml  org.gnome.GnomeMpv.gschema.xml.in
gnome-mpv/: metadata
gnome-mpv/files/lib/: libass.so.5.2.1  libfribidi.so.0.3.6
gnome-mpv/files/lib/debug/lib/: libass.so.5.2.1.debug  libfribidi.so.0.3.6.debug
gnome-mpv/files/lib/debug/source/yasm/: gas-token.c  lc3bid.c  nasm-token.c
gnome-mpv/files/lib/pkgconfig/: fribidi.pc  libass.pc
src/: actionctl.c  application.c  common.c  common.h  control_box.c  control_box.h  def.h  gmpv_actionctl.c  gmpv_application.c  gmpv_application_action.c  gmpv_authors.h  gmpv_common.c  gmpv_common.h  gmpv_control_box.c  gmpv_def.h  gmpv_main_window.c  gmpv_marshal.c  gmpv_marshal.h  gmpv_menu.c  gmpv_mpv_obj.c  gmpv_open_loc_dialog.c  gmpv_playlist.c  gmpv_playlist.h  gmpv_playlist_widget.c  gmpv_video_area.h  main_window.c  main_window.h  menu.c  mpv_obj.c  open_loc_dialog.c  playlist.c
src/mpris/: gmpv_mpris.h  gmpv_mpris_gdbus.c  gmpv_mpris_gdbus.h  gmpv_mpris_player.h
